// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components :: tour :: book-show-button renders a "free" label when no price or book link exists 1`] = `
<p
  className="price"
>
  Entrée gratuite
</p>
`;

exports[`components :: tour :: book-show-button renders a reservation link with "free" label when there is a book link but no price 1`] = `
<a
  className="btn-teal"
  href="my-wonderfull-buy-link"
  rel="noreferrer"
  target="_blank"
>
  Réserver (Entrée gratuite)
</a>
`;

exports[`components :: tour :: book-show-button renders a reservation link with the price 1`] = `
<a
  className="btn-teal"
  href="my-wonderfull-buy-link"
  rel="noreferrer"
  target="_blank"
>
  Réserver (35€)
</a>
`;

exports[`components :: tour :: book-show-button renders an "on site booking button" when no book link exists, but there is a price 1`] = `
<p
  className="price"
>
  Vente sur place (35€)
</p>
`;

exports[`components :: tour :: book-show-button renders an hyphen is the show is passed 1`] = `
<p>
  -
</p>
`;
